feat(m2): deliver provider adapters (#42)