@@ -2,6 +2,8 @@ package com.aicostops.ingestion.application;
 
 import com.aicostops.ingestion.domain.RawRecordNormalizeStatus;
 import java.time.Instant;
+import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 
@@ -21,8 +23,12 @@ public record NormalizedProviderRecord(
         List<ImportIssueDraft> issues) {
 
     public NormalizedProviderRecord {
-        rawPayload = rawPayload == null ? Map.of() : Map.copyOf(rawPayload);
-        normalizedPayload = normalizedPayload == null ? null : Map.copyOf(normalizedPayload);
+        // Provider-native blank cells/missing values surface as null and must survive
+        // to persistence redaction instead of failing Map.copyOf.
+        rawPayload = rawPayload == null || rawPayload.isEmpty()
+                ? Map.of() : Collections.unmodifiableMap(new LinkedHashMap<>(rawPayload));
+        normalizedPayload = normalizedPayload == null
+                ? null : Collections.unmodifiableMap(new LinkedHashMap<>(normalizedPayload));
         issues = issues == null ? List.of() : List.copyOf(issues);
     }
 }
